--- a/.github/workflows/update-and-deploy.yml
+++ b/.github/workflows/update-and-deploy.yml
@@ -1,58 +1,31 @@
-name: Update and Deploy Marvel Addon
-
+name: Update MCU Data
 on:
   schedule:
-    - cron: '0 0 1 * *' # Runs on the 1st of every month at midnight UTC
-  workflow_dispatch: # Allows manual trigger
+    - cron: "0 0 1 * *"
+  workflow_dispatch:
 
 jobs:
   update:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-
+      - uses: actions/checkout@v3
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '16'
-
       - name: Install dependencies
-        run: npm install
-
-      - name: Update MCU data
-        run: node scripts/updateMcuData.js
+        run: npm install axios
+      - name: Update MCU Data
         env:
           TMDB_API_KEY: ${{ secrets.TMDB_API_KEY }}
           OMDB_API_KEY: ${{ secrets.OMDB_API_KEY }}
-
+        run: |
+          node updateMcuData.js
+          cat src/mcuData.js
       - name: Commit changes
         run: |
           git config user.name "GitHub Action"
           git config user.email "action@github.com"
           git add src/mcuData.js
-          git commit -m "Monthly MCU data update" || echo "No changes to commit"
-          git push origin main
-
-  deploy:
-    needs: update
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16'
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Test add-on
-        run: |
-          node src/addon.js & 
-          sleep 10
-          curl -v http://localhost:7000/manifest.json || echo "Curl failed"
+          git commit -m "Update mcuData.js with new releases" || echo "No changes"
+          git push
