--- a/.github/workflows/update-and-deploy.yml
+++ b/.github/workflows/update-and-deploy.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Garante que pega todo o repositório
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
@@ -20,7 +22,9 @@ jobs:
           TMDB_API_KEY: ${{ secrets.TMDB_API_KEY }}
           OMDB_API_KEY: ${{ secrets.OMDB_API_KEY }}
         run: |
-          node updateMcuData.js
+          ls -la  # Lista arquivos na raiz
+          ls -la scripts/  # Lista arquivos em scripts/
+          node scripts/updateMcuData.js  # Ajustado para o caminho correto
           cat src/mcuData.js
       - name: Commit changes
         run: |
